Fixes to stylesheet descriptions, whitespace tweaks

--- a/resources.whatwg.org/spec.css
+++ b/resources.whatwg.org/spec.css
@@ -1,7 +1,8 @@
-/* Styles used by Bikeshed-generated documents (specs and Review Drafts)
-   Just bare structural stuff, since RDs intentionally don't get very styled.
-   RDs will *not* have access to the common variables, so supply a basic
-   (light-mode) fallback value for any variable usage in this stylesheet. */
+/* Styles used by all specs, including both Living Standards and Review
+   Drafts, but not the HTML Dev Edition. Just bare structural stuff,
+   since RDs intentionally don't get very styled. RDs will *not* have
+   access to the common variables, so supply a basic (light-mode)
+   fallback value for any variable usage in this stylesheet. */
 
 .head .logo { position: absolute; top: 1em; right: 1em; line-height: 0; }
 .head .logo img { border: none; }
